# AeroGuard

./: .gitignore  CRITICAL_FIX_SUMMARY.md  FIXES_APPLIED.md  README.md  VERIFICATION_CHECKLIST.md  docker-compose.yml  package.json
AeroGuardEngine/: CMakeLists.txt  GSDCalculator.cpp  GSDCalculator.h  Slicer.cpp  Slicer.h  WebhookClient.cpp  WebhookClient.h  main.cpp  run_engine.bat  train_gpu.py  train_production.py  train_yolo.py
AeroGuardEngine/Plant-disease-1/: README.dataset.txt  README.roboflow.txt  data.yaml
AeroGuardEngine/Plant-disease-1/test/labels/: 11fd6d2c-f5fe-4128-ba6d-ce0873785493-4cbf7e8_2_jpg.rf.e34e96549ea54c4765d74002fbf0545b.txt  11fd6d2c-f5fe-4128-ba6d-ce0873785493-4cbf7e8_4_jpg.rf.9c153a36024c41461ad16e3ca8a4a787.txt  1200px-Gymnosporangium_juniperii_telial_form_4_jpg.rf.da31aaf82e292e2e6d0bd4ce1f5516bc.txt  1200px-Scale_and_sooty_mold_on_a_Eucalyptus_tree_3_jpg.rf.1969c81c25fcb2d27bd6e9a9d1097a3f.txt  1234146_3_jpg.rf.b334c52cc1c3de22ceaf7031d0faa211.txt  12517743_l-123stock_1_jpg.rf.25773ba17de4597a48b5aa968ed4b286.txt  14304854510_ac794edb62_q_1_aug1_jpg.rf.a915e9eb7e130bf8d16a40575855db42.txt  14304854510_ac794edb62_q_3_aug0_jpg.rf.be56644d41c25b157eb504df156016bd.txt  14304854510_ac794edb62_q_3_jpg.rf.7a48734cd1073c001620d50b75091ddf.txt  153927_medium_3_jpg.rf.f5355e2c1be8e42fd96c3f885e4fbd35.txt  1573335-PPT_3_jpg.rf.c7b77b2504bc3b848fdf2f76a1df6e23.txt  2-pyridia-lg_4_jpg.rf.c062848e3454aa8373c8346ad4986a44.txt  20-06-07_3_jpg.rf.8e01e0b67d25d4aff7a99c55418896b4.txt  200402011GoldenCanker2_aug2_jpg.rf.75083f437ac71f8da12efb91965bcd6e.txt  20140730_100513-300x200_4_jpg.rf.fa6afa3b54297352cd5143561f2b88e6.txt  32624427_l-123stock_4_aug0_jpg.rf.27abd3540c17d932937797620a250777.txt  (+192 more)
AeroGuardEngine/Plant-disease-1/train/: labels.cache
AeroGuardEngine/Plant-disease-1/valid/: labels.cache
client/: package-lock.json  (+2 more)
cpp-engine/: CMakeLists.txt  DoctorClassify.cpp  DoctorClassify.hpp  GeoMath.cpp  GeoMath.hpp  ScoutDet.cpp  ScoutDet.hpp  main.cpp
(+2062 files in other folders)
